--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(ejercicios_1 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(ejercicios_1 main.c)
+add_executable(ejercicios_1 src/ej1.c
+        src/ej2.c
+)
