--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,6 @@ project(ejercicios_1 C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(ejercicios_1 src/ej1.c
-        src/ej2.c
-)
+add_executable(ej1 src/ej1.c)
+add_executable(ej2 src/ej2.c)
+add_executable(ej3 src/ej3.c)
